--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -17,6 +17,12 @@
     'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+@layer components {
+    .main-menu > div:first-child {
+        @apply w-full
+    }
+}
+
 /*
   The default border color has changed to `currentcolor` in Tailwind CSS v4,
   so we've added these compatibility styles to make sure everything still
